--- a/OganiWebApp/OganiWebApp/Areas/Client/Views/Authentication/Login.cshtml
+++ b/OganiWebApp/OganiWebApp/Areas/Client/Views/Authentication/Login.cshtml
@@ -47,13 +47,8 @@
                                     <button class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn" type="submit">SIGN IN <i class="fas fa-sign-in-alt ms-1"></i></button>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <div class="form-check">
-                                        <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input">
-                                            Keep me signed in
-                                        </label>
-                                    </div>
-                                    <a  class="auth-link text-black">Forgot password?</a>
+                                   
+                                    <a asp-route="client-auth-register" class="auth-link text-black">Register</a>
                                 </div>
                                 
                             </form>
