--- a/OganiWebApp/OganiWebApp/Areas/Client/Views/Blog/Item.cshtml
+++ b/OganiWebApp/OganiWebApp/Areas/Client/Views/Blog/Item.cshtml
@@ -1,4 +1,8 @@
-﻿<section class="blog-details-hero set-bg" data-setbg="img/blog/details/details-hero.jpg">
+﻿@using OganiWebApp.Areas.Client.ViewModels
+@model BlogItemVIewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<section class="blog-details-hero set-bg" data-setbg="/client/assests/img/blog/details/details-hero.jpg">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -22,89 +26,61 @@
             <div class="col-lg-4 col-md-5 order-md-1 order-2">
                 <div class="blog__sidebar">
                     <div class="blog__sidebar__search">
-                        <form action="#">
-                            <input type="text" placeholder="Search...">
+                        <form method="get" asp-route="client-blog-filter">
+                            <input name="Search" type="text" placeholder="Search...">
                             <button type="submit"><span class="icon_search"></span></button>
                         </form>
                     </div>
                     <div class="blog__sidebar__item">
                         <h4>Categories</h4>
                         <ul>
-                            <li><a href="#">All</a></li>
-                            <li><a href="#">Beauty (20)</a></li>
-                            <li><a href="#">Food (5)</a></li>
-                            <li><a href="#">Life Style (9)</a></li>
-                            <li><a href="#">Travel (10)</a></li>
+                            @foreach (var category in Model.BlogCategories)
+                            {
+                                <input type="hidden" value="@category.Id" asp-for="BlogCategoryId">
+                                <li><a asp-route="client-blog-filter" data-id="@category.Id" class="get-categories">@category.Title <span>+</span></a></li>
+                            }
                         </ul>
                     </div>
                     <div class="blog__sidebar__item">
                         <h4>Recent News</h4>
                         <div class="blog__sidebar__recent">
-                            <a href="#" class="blog__sidebar__recent__item">
-                                <div class="blog__sidebar__recent__item__pic">
-                                    <img src="img/blog/sidebar/sr-1.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__recent__item__text">
-                                    <h6>09 Kinds Of Vegetables<br /> Protect The Liver</h6>
-                                    <span>MAR 05, 2019</span>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__recent__item">
-                                <div class="blog__sidebar__recent__item__pic">
-                                    <img src="img/blog/sidebar/sr-2.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__recent__item__text">
-                                    <h6>Tips You To Balance<br /> Nutrition Meal Day</h6>
-                                    <span>MAR 05, 2019</span>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__recent__item">
-                                <div class="blog__sidebar__recent__item__pic">
-                                    <img src="img/blog/sidebar/sr-3.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__recent__item__text">
-                                    <h6>4 Principles Help You Lose <br />Weight With Vegetables</h6>
-                                    <span>MAR 05, 2019</span>
-                                </div>
-                            </a>
+                            @foreach (var blog in Model.NewBlogs)
+                            {
+                                <a asp-route="client-blog-item" asp-route-id="@blog.Id" class="blog__sidebar__recent__item">
+                                    <div class="blog__sidebar__recent__item__pic">
+                                        <img width="10%" src="~/@blog.ThumbNailImgUrl" alt="">
+                                    </div>
+                                    <div class="blog__sidebar__recent__item__text">
+                                        <h6>@blog.Title</h6>
+                                        <span>@blog.Created.ToString("MMM dd, yyyy").ToUpper()</span>
+                                    </div>
+                                </a>
+                            }
                         </div>
                     </div>
                     <div class="blog__sidebar__item">
                         <h4>Search By</h4>
                         <div class="blog__sidebar__item__tags">
-                            <a href="#">Apple</a>
-                            <a href="#">Beauty</a>
-                            <a href="#">Vegetables</a>
-                            <a href="#">Fruit</a>
-                            <a href="#">Healthy Food</a>
-                            <a href="#">Lifestyle</a>
+                            @foreach (var category in Model.BlogCategories)
+                            {
+                                <input type="hidden" value="@category.Id" asp-for="BlogCategoryId">
+                                <a asp-route="client-blog-filter" data-id="@category.Id" class="get-categories">@category.Title <span>+</span></a>
+                            }
+
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-8 col-md-7 order-md-1 order-1">
                 <div class="blog__details__text">
-                    <img src="img/blog/details/details-pic.jpg" alt="">
-                    <p>
-                        Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
-                        dui. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Mauris blandit
-                        aliquet elit, eget tincidunt nibh pulvinar a. Vivamus magna justo, lacinia eget consectetur
-                        sed, convallis at tellus. Sed porttitor lectus nibh. Donec sollicitudin molestie malesuada.
-                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus.
-                        Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis
-                        quis ac lectus. Donec sollicitudin molestie malesuada. Nulla quis lorem ut libero malesuada
-                        feugiat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
-                    </p>
+                    <img src="~/@Model.Blog.ThumbNailImgUrl" alt="">
                     <h3>
-                        The corner window forms a place within a place that is a resting point within the large
-                        space.
+                        @Model.Blog.Title
                     </h3>
                     <p>
-                        The study area is located at the back with a view of the vast nature. Together with the other
-                        buildings, a congruent story has been managed in which the whole has a reinforcing effect on
-                        the components. The use of materials seeks connection to the main house, the adjacent
-                        stables
+                        @Model.Blog.Content
                     </p>
+
                 </div>
                 <div class="blog__details__content">
                     <div class="row">
@@ -152,51 +128,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="img/blog/blog-1.jpg" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                        <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="img/blog/blog-2.jpg" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
-                        <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+            @foreach (var blog in Model.SuggestedBlogs)
+            {
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="~/@blog.ThumbNailImgUrl" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <ul>
+                                <li><i class="fa fa-calendar-o"></i> @blog.Created.ToString("MMM dd, yyyy").ToUpper()</li>
+                                <li><i class="fa fa-comment-o"></i> 5</li>
+                            </ul>
+                            <h5><a asp-route="client-blog-item" asp-route-id="@blog.Id">@blog.Title</a></h5>
+                            <p>@blog.Content </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="img/blog/blog-3.jpg" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">Visit the clean farm in the US</a></h5>
-                        <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
-                    </div>
-                </div>
-            </div>
+            }
+            
         </div>
     </div>
 </section>
