--- a/OganiWebApp/OganiWebApp/Areas/Client/Views/Home/Index.cshtml
+++ b/OganiWebApp/OganiWebApp/Areas/Client/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="~/client/assests/#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a asp-route="client-cart-list"><i class="fa fa-shopping-bag"></i> <span></span></a></li>
             </ul>
         </div>
         <div class="humberger__menu__widget">
@@ -59,22 +59,13 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="~/client/assests/#"><i class="fa fa-user"></i> Login</a>
+                <a asp-route="client-auth-login"><i class="fa fa-user"></i> Login</a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
                 <li class="active"><a href="~/client/assests/./index.html">Home</a></li>
                 <li><a href="~/client/assests/./shop-grid.html">Shop</a></li>
-                <li>
-                    <a href="~/client/assests/#">Pages</a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="~/client/assests/./shop-details.html">Shop Details</a></li>
-                        <li><a href="~/client/assests/./shoping-cart.html">Shoping Cart</a></li>
-                        <li><a href="~/client/assests/./checkout.html">Check Out</a></li>
-                        <li><a href="~/client/assests/./blog-details.html">Blog Details</a></li>
-                    </ul>
-                </li>
                 <li><a href="~/client/assests/./blog.html">Blog</a></li>
                 <li><a href="~/client/assests/./contact.html">Contact</a></li>
             </ul>
@@ -95,138 +86,7 @@
     </div>
     <!-- Humberger End -->
     <!-- Header Section Begin -->
-    <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="header__top__left">
-                            <ul>
-                                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                                <li>Free Shipping for all Order of $99</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="header__top__right">
-                            <div class="header__top__right__social">
-                                <a href="~/client/assests/#"><i class="fa fa-facebook"></i></a>
-                                <a href="~/client/assests/#"><i class="fa fa-twitter"></i></a>
-                                <a href="~/client/assests/#"><i class="fa fa-linkedin"></i></a>
-                                <a href="~/client/assests/#"><i class="fa fa-pinterest-p"></i></a>
-                            </div>
-                            <div class="header__top__right__language">
-                                <img src="~/client/assests/img/language.png" alt="">
-                                <div>English</div>
-                                <span class="arrow_carrot-down"></span>
-                                <ul>
-                                    <li><a href="~/client/assests/#">Spanis</a></li>
-                                    <li><a href="~/client/assests/#">English</a></li>
-                                </ul>
-                            </div>
-                            <div class="header__top__right__auth">
-                                <a href="~/client/assests/#"><i class="fa fa-user"></i> Login</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="header__logo">
-                        <a href="index.html"><img src="~/client/assests/img/logo.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <nav class="header__menu">
-                        <ul>
-                            <li class="active"><a href="~/client/assests/./index.html">Home</a></li>
-                            <li><a href="~/client/assests/./shop-grid.html">Shop</a></li>
-                            <li>
-                                <a href="~/client/assests/#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="~/client/assests/./shop-details.html">Shop Details</a></li>
-                                    <li><a href="~/client/assests/./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="~/client/assests/./checkout.html">Check Out</a></li>
-                                    <li><a href="~/client/assests/./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="~/client/assests/./blog.html">Blog</a></li>
-                            <li><a href="~/client/assests/./contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-3">
-                    <div class="header__cart">
-                        <ul>
-                            <li><a href="~/client/assests/#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="~/client/assests/#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
-                        </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="humberger__open">
-                <i class="fa fa-bars"></i>
-            </div>
-        </div>
-    </header>
-    <!-- Header Section End -->
-    <!-- Hero Section Begin -->
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="hero__categories">
-                        <div class="hero__categories__all">
-                            <i class="fa fa-bars"></i>
-                            <span>All Categories</span>
-                        </div>
-                        <ul>
-                            @foreach (var category in Model.Categories)
-                            {
-                                <li><a href="~/client/assests/#">@category.Title</a></li>
-                            }
-
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="hero__search">
-                        <div class="hero__search__form">
-                            <form method="post" asp-route="client-product-search">
-                                <div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>
-                                <input name="Search" type="text" placeholder="What do yo u need?">
-                                <button type="submit" class="site-btn">SEARCH</button>
-                            </form>
-                        </div>
-                        <div class="hero__search__phone">
-                            <div class="hero__search__phone__icon">
-                                <i class="fa fa-phone"></i>
-                            </div>
-                            <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
-                                <span>support 24/7 time</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hero__item set-bg" data-setbg="/client/assests/img/hero/banner.jpg">
-                        <div class="hero__text">
-                            <span>FRUIT FRESH</span>
-                            <h2>Vegetable <br />100% Organic</h2>
-                            <p>Free Pickup and Delivery Available</p>
-                            <a href="~/client/assests/#" class="primary-btn">SHOP NOW</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    @await Component.InvokeAsync(nameof(Header))
     <!-- Hero Section End -->
     <!-- Categories Section Begin -->
     <section class="categories">
@@ -237,7 +97,7 @@
                     {
                         <div class="col-lg-3">
                             <div class="categories__item set-bg" data-setbg="/@slider.BgImageNameUrl">
-                                <h5><a href="~/client/assests/#">@slider.Title</a></h5>
+                                <h5><a >@slider.Title</a></h5>
                             </div>
                         </div>
                     }
@@ -260,8 +120,6 @@
                             <li class="active" data-filter="*">All</li>
                             <li data-filter=".oranges">Oranges</li>
                             <li data-filter=".fresh-meat">Fresh Meat</li>
-                            <li data-filter=".vegetables">Vegetables</li>
-                            <li data-filter=".fastfood">Fastfood</li>
                         </ul>
                     </div>
                 </div>
@@ -304,7 +162,7 @@
 
                                     @foreach (var productItem in product)
                                     {
-                                        <a href="~/client/assests/#" class="latest-product__item">
+                                        <a asp-route="client-shop-item" asp-route-id="@productItem.Id" class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="~/@productItem.MainImageUrl" alt="">
                                             </div>
@@ -332,7 +190,7 @@
 
                                     @foreach (var productItem in product)
                                     {
-                                        <a href="~/client/assests/#" class="latest-product__item">
+                                        <a asp-route="client-shop-item" asp-route-id="@productItem.Id"class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="~/@productItem.MainImageUrl" alt="">
                                             </div>
@@ -358,7 +216,7 @@
 
                                     @foreach (var productItem in product)
                                     {
-                                        <a href="~/client/assests/#" class="latest-product__item">
+                                        <a asp-route="client-shop-item" asp-route-id="@productItem.Id" class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="~/@productItem.MainImageUrl" alt="">
                                             </div>
@@ -399,10 +257,10 @@
                             </div>
                             <div class="blog__item__text">
                                 <ul>
-                                    <li><i class="fa fa-calendar-o"></i> @blog.Created</li>
+                                    <li><i class="fa fa-calendar-o"></i> @blog.Created.ToString("MMM dd, yyyy").ToUpper()</li>
                                     <li><i class="fa fa-comment-o"></i> 5</li>
                                 </ul>
-                                <h5><a href="~/client/assests/#">@blog.Content</a></h5>
+                                <h5><a asp-route="client-blog-item" asp-route-id="@blog.Id">@blog.Title</a></h5>
                                 <p>@(blog.Content.Length>100 ? blog.Content.Substring(0,100) + "..." : blog.Content)</p>
                             </div>
                         </div>
