--- a/OganiWebApp/OganiWebApp/Areas/Client/Views/Shared/Components/FeuturedProduct/Default.cshtml
+++ b/OganiWebApp/OganiWebApp/Areas/Client/Views/Shared/Components/FeuturedProduct/Default.cshtml
@@ -9,13 +9,12 @@
         <div class="featured__item">
             <div class="featured__item__pic set-bg" data-setbg="/@product.MainImageNameInFileSystem">
                 <ul class="featured__item__pic__hover">
-                    <li><a href="~/client/assests/#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="~/client/assests/#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="~/client/assests/#"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li><a asp-route="client-shop-item" asp-route-id="@product.Id"><i class="fa fa-retweet"></i></a></li>
+                    <li><a asp-route="client-basket-add" asp-route-id="@product.Id"><i class="fa fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
             <div class="featured__item__text">
-                <h6><a href="~/client/assests/#">@product.Name</a></h6>
+                <h6><a asp-route="client-shop-item" asp-route-id="@product.Id">@product.Name</a></h6>
                 <h5>$@product.Price</h5>
             </div>
         </div>
