--- a/OganiWebApp/OganiWebApp/Areas/Client/Views/Shop/Index.cshtml
+++ b/OganiWebApp/OganiWebApp/Areas/Client/Views/Shop/Index.cshtml
@@ -31,7 +31,7 @@
                             @foreach (var category in Model.ProductCategories)
                             {
                                 <input type="hidden" value="@category.Id" asp-for="CategoryId">
-                                <li><a asp-route="client-product-filter" data-id="@category.Id" class="get-categories">@category.Title <span>+</span></a></li>
+                                <li><a asp-route="client-product-filter" asp-route-CategoryId="@category.Id" data-id="@category.Id" class="get-categories">@category.Title <span>+</span></a></li>
                             }
 
                         </ul>
@@ -49,8 +49,8 @@
                                 <div class="price-input">
                                     <form method="get" asp-route="client-product-filter">
 
-                                        <input value="@Model.MinPrice" asp-for="MinPrice" type="text" id="minamount">
-                                        <input value="@Model.MaxPrice" asp-for="MaxPrice" type="text" id="maxamount">
+                                        <input name="minPrice"  id="minamount">
+                                        <input name="maxPrice"  id="maxamount">
 
                                         <button type="submit">Filter</button>
                                     </form>
@@ -65,7 +65,7 @@
                             @foreach (var size in Model.ProductSizes)
                             {
                                 <input type="hidden" value="@size.Id" asp-for="CategoryId">
-                                <li><a asp-route="client-product-filter" data-id="@size.Id" class="get-categories">@size.Title <span>+</span></a></li>
+                                <li><a asp-route="client-product-filter" asp-route-SizeId="@size.Id" data-id="@size.Id" class="get-categories">@size.Title <span>+</span></a></li>
                             }
 
                         </ul>
@@ -79,7 +79,7 @@
                                 <div class="latest-prdouct__slider__item">
                                     @foreach (var product in Model.DiscountedProducts)
                                     {
-                                        <a href="#" class="latest-product__item">
+                                        <a asp-route="client-shop-item" asp-route-id="@product.Id" class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="~/@product.MainImageUrl" alt="">
                                             </div>
@@ -94,7 +94,7 @@
                                 <div class="latest-prdouct__slider__item">
                                     @foreach (var product in Model.DiscountedProducts)
                                     {
-                                        <a href="#" class="latest-product__item">
+                                        <a asp-route="client-shop-item" asp-route-id="@product.Id" class="latest-product__item">
                                             <div class="latest-product__item__pic">
                                                 <img src="~/@product.MainImageUrl" alt="">
                                             </div>
@@ -122,12 +122,11 @@
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
-                                             data-setbg="@product.MainImageUrl">
+                                             data-setbg="/@product.MainImageUrl">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                                <li><a asp-route="client-shop-item" asp-route-id="@product.Id"><i class="fa fa-retweet"></i></a></li>
+                                                <li><a asp-route="client-basket-add" asp-route-id="@product.Id"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
                                         <div class="product__discount__item__text">
@@ -167,7 +166,7 @@
 
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
+                                <div class="product__item__pic set-bg" data-setbg="/@product.MainImageUrl">
                                     <ul class="product__item__pic__hover">
                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
@@ -175,8 +174,8 @@
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="#">Crab Pool Security</a></h6>
-                                    <h5>$30.00</h5>
+                                    <h6><a asp-route="client-shop-item" asp-route-id="@product.Id" >@product.Name</a></h6>
+                                    <h5>$@product.Price</h5>
                                 </div>
                             </div>
                         </div>
